--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
-    implementation('com.nimmsta.core:shared-jvm:5.0.3450') {
+    implementation('com.nimmsta.core:shared-jvm:6.0.+') {
         transitive = true
         changing = true
     }
